--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Animal Welfare</title>
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Material Icons (optional, if you want to use a vector icon instead of image) -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <div class="app">
     <header>
       <h1>ANIMAL WELFARE</h1>
-      <input type="text" placeholder="Search here" class="search" />
+      <div class="header-right">
+        <input type="text" placeholder="Search here" class="search" />
+      
+        <!-- User Icon -->
+        <div class="user-menu" onclick="toggleUserMenu()">
+          <img src="https://png.pngtree.com/png-vector/20191110/ourmid/pngtree-avatar-icon-profile-icon-member-login-vector-isolated-png-image_1978396.jpg" alt="User Icon" class="user-icon" />
+          
+          <!-- Dropdown -->
+          <div id="user-dropdown" class="dropdown hidden">
+            <button onclick="loadPage('login')">Login</button>
+            <button onclick="loadPage('register')">Register</button>
+          </div>
+        </div>
+      </div>
     </header>
+
     <main>
       <div class="menu-icon" onclick="toggleMenu()">☰</div>
     </main>
@@ -28,7 +45,7 @@
     </nav>
 
     <main id="main-content">
-      <p>Welcome to Animal Welfare. Select a section from the menu.</p>
+      <p>Welcome to Animal Welfare.<br> Select a section from the menu.</p>
     </main>
   </div>
 
