--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,9 @@
         </ul>
       </nav>
 
-      <!-- 🔽 Updated: Profile menu is now dynamic -->
       <div id="profile-menu" class="hidden profile-menu">
         <ul id="profile-menu-items">
-          <!-- Will be filled dynamically by JS -->
+          <!-- Filled dynamically -->
         </ul>
       </div>
 
