--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
         <!-- Center: Title and Search -->
         <div class="center-content">
-          <h1>ANIMAL WELFARE</h1>
+          <h1 id="co">ANIMAL WELFARE</h1>
           <input type="text" placeholder="Search here" class="search" />
         </div>
 
