--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animal Welfare</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="logo.jpg" />
+    <link rel="icon" type="image/png" href="images/logo.jpg" />
   </head>
   <body>
     <div class="app">
