--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       </main>
     </div>
 
-    <footer id="class">&copy; All rights reserved.</footer>
+    <footer style="align-items:flex-end;" id="class">&copy; All rights reserved.</footer>
 
     <script src="script.js"></script>
   </body>
