--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
         <!-- Center: Title and Search -->
         <div class="center-content">
           <h1 id="co">ANIMAL WELFARE</h1>
-          <input type="text" placeholder="Search here" class="search" />
+          <input type="text" id="header-search" placeholder="Search here" class="search" width="80px" />
+          <img src="images/search.jpeg" alt="search-icon" style="width: 20px; height:20px">
         </div>
 
         <!-- Right: Profile Icon -->
